# libotfont

./: CMakeLists.txt
sample/: CMakeLists.txt
sample/openvg/: CMakeLists.txt  file_source.c  file_source.h  main.cpp  malloc_heap.c  malloc_heap.h
sample/openvg/MonkVG/: CMakeLists.txt
sample/openvg/MonkVG/gles2-bc/: CMakeLists.txt
src/: CMakeLists.txt  OpenType.c  OpenType.cpp  OpenType.h  OpenType.hpp
test/: CMakeLists.txt  byte_array.c  byte_array.h  gtest.cpp  test_OpenType.cpp  test_byte_array.cpp
